define scripts, add dependecies

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "aframe-particle-system-component": "^1.0.10",
     "aframe-react": "^4.3.0",
     "aframe-sun-sky": "^3.0.3",
+    "axios": "^0.17.1",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
     "install": "^0.10.2",
     "npm": "^5.5.1",
     "react": "^16.1.1",
@@ -21,7 +24,8 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "dev": "node index.js"
   },
   "devDependencies": {
     "@types/jest": "^21.1.6",
