--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/aframe": "^0.5.0",
+    "@types/lodash": "^4.14.85",
     "@types/rx": "^4.1.1",
     "aframe": "^0.7.1",
     "aframe-event-set-component": "^4.0.1",
@@ -14,6 +15,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "install": "^0.10.2",
+    "lodash": "^4.17.4",
     "npm": "^5.5.1",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
